# band-structure-color

./: .ycm_extra_conf.py  CMakeLists.txt
common/: LCh.cpp  XYZ.cpp  blackbody.cpp  color-christoffel-symbols.cpp  color-difference-2000.cpp  color-euler-method.cpp  color-fixed-point-finite-method.cpp  d65.cpp  exp_by_squaring.cpp  png-writer.c  png-writer.cpp  print-color.cpp  shortest-path-color.cpp  xorshift.c  xorshift.cpp
includes/: LCh.hpp  XYZ.h  XYZ.hpp  blackbody.hpp  color-christoffel-symbols.hpp  color-difference-2000.hpp  color-euler-method.hpp  color-fixed-point-finite-method.hpp  constants.hpp  d65.h  exp-by-squaring.hpp  png-writer.h  png-writer.hpp  print-color.hpp  shortest-path-color.hpp  template-integration.hpp  xorshift.h  xorshift.hpp
other/: energy-levels.c
src/: 2D-acceptor-color.cpp  XYZ.c  XYZ.cpp  band-gap-color.cpp  geodesic-color.cpp  green.cpp  template-integration.cpp  visible-spectrum.cpp
